-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.2.0 Beta1
-
None
-
Windows; OSX; native dialogs only (widget implementation seems OK)
-
7e5452a23f02c87f73f729cf6eab0ffe1ffa440c
QFileDialog does not preselect File since 37ca2224eca671200a2710f57f970d2993e62aa5.
Simple test:
#include <QApplication> #include <QFileDialog> int main(int argc, char *argv[]) { QApplication a(argc, argv); QFileDialog::getSaveFileName(0, QString(), "C:/test.txt"); return 0; }
Screenshots attached.
- relates to
-
QTBUG-39706 QFileDialog::getSaveFileName does not shows the supplied file name in dialog
-
- Closed
-
- resulted in
-
QTBUG-34446 REG (from 5.2 Alpha): QFileDialog::getSaveFileName() does not open the file dialog in the specified directory when using native dialogs
-
- Closed
-
| For Gerrit Dashboard: QTBUG-34408 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 69684,4 | Fix QFileDialog::getSaveFilename() with a given default name | stable | qt/qtbase | Status: MERGED | +2 | 0 |